versioned_docs/version-1.9.x/guides/data-querying.mdx
---
sidebar_position: 3
title: Data Querying
description: Complete guide to querying data from ReductStore using the CLI, HTTP API and SDKs.
---

import CodeBlock from "@theme/CodeBlock";
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<head>
    <link rel="canonical" href="https://www.reduct.store/docs/guides/data-querying"/>
</head>

# Data Querying From ReductStore Database

ReductStore is a time series database that provides efficient data retrieval capabilities. This guide explains how to query data from ReductStore using the CLI, HTTP API, and SDKs.

## Concepts

ReductStore provides an efficient data retrieval solution by batching multiple records within a specified time interval into a single HTTP request, which is beneficial for managing large volumes of data as it reduces the number of requests and overall delay.

The query process is designed as an iterator, returning a batch of records in each iteration. This method allows data to be processed in segments, an approach that is useful when managing large datasets.

While it is possible to retrieve a record by its timestamp, this method is less optimal than querying by a time range due to the lack of batching. However, this approach can be useful for querying specific versions of non-time series records, such as AI models, configurations, or file versions, when timestamps are used as identifiers.

## Query Parameters

Data can be queried using the ReductStore CLI, SDKs or HTTP API. The query parameters are the same for all interfaces and include:

- Start and end time range
- List of label values to include
- List of labels to exclude
- Limit on the number of records to return
- Head flag to retrieve metadata only

There are also more advanced parameters available in the SDKs and HTTP API, such as

- Query TTL (Time to Live)
- Continuous flag to keep the query open for continuous data retrieval
- Pool interval to specify the time interval for pooling data in continuous mode

### Time Range

The time range is defined by the `start` and `end` parameters. Records with a timestamp equal to or greater than `start` and less than `end` are included in the result. If the `start` parameter is not set, the query starts from the begging of the entry. If the `end` parameter is not set, the query continues to the end of the entry. If both `start` and `end` are not set, the query returns the entire entry.

### Include Labels

The `include` parameter filters the records by the specified label values. Only those that match ALL the specified label values are included in the result.

### Exclude Labels

The `exclude` parameter filters records based on specified labels. Any records matching ALL of these labels will be omitted from the results.

### Limit Records

The `limit` parameter restricts the number of records returned by a query. If the dataset has fewer records than the specified limit, all records are returned.

### TTL (Time-to-Live)

The `ttl` parameter determines the time-to-live of a query. The query is automatically closed when the specified time has elapsed since it was created. This prevents memory leaks by limiting the number of open queries. The default TTL is 60 seconds.
### Head Flag

The `head` flag is used to retrieve only metadata. When set to `true`, the query returns the records' metadata, excluding the actual data. This parameter is useful when you want to work with labels without downloading the content of the records.

### Continuous Mode

The `continuous` flag is used to keep the query open for continuous data retrieval. This mode is useful when you need to monitor data in real-time. The SDKs provide `pool_interval` parameter to specify the time interval for pooling data in continuous mode. The default interval is 1 second.

## Typical Data Querying Cases

This section provides guidance on implementing typical data querying cases using the ReductStore CLI, SDKs, or HTTP API. All examples are designed for a local ReductStore instance, accessible at **[http://127.0.0.1:8383](http://127.0.0.1:8383/)** using the API token 'my-token'.

For more information on setting up a local ReductStore instance, see the **[Getting Started](/docs/getting-started)** guide.

### Querying Data by Time Range

The most common use case is to query data within a specific time range:

import TimeRangeQueryPy from "!!raw-loader!../examples/py/src/data_querying_time_range.py"
import TimeRangeQueryJs from "!!raw-loader!../examples/js/src/data_querying_time_range.mjs"
import TimeRangeQueryRs from "!!raw-loader!../examples/rs/examples/data_querying_time_range.rs"
import TimeRangeQueryCpp from "!!raw-loader!../examples/cpp/src/data_querying_time_range.cc"
import TimeRangeQueryCLI from "!!raw-loader!../examples/cli/data_querying_time_range.sh"
import TimeRangeQueryCurl from "!!raw-loader!../examples/curl/data_querying_time_range.sh"

<Tabs>
    <TabItem value="Python">
        <CodeBlock language="python">
            {TimeRangeQueryPy}
        </CodeBlock>
    </TabItem>
    <TabItem value="JavaScript">
        <CodeBlock language="javascript">
            {TimeRangeQueryJs}
        </CodeBlock>
    </TabItem>
    <TabItem value="Rust">
        <CodeBlock language="rust">
            {TimeRangeQueryRs}
        </CodeBlock>
    </TabItem>
    <TabItem value="C++">
        <CodeBlock language="cpp">
            {TimeRangeQueryCpp}
        </CodeBlock>
    </TabItem>
    <TabItem value="CLI">
        <CodeBlock language="bash">
            {TimeRangeQueryCLI}
        </CodeBlock>
    </TabItem>
    <TabItem value="Curl">
        <CodeBlock language="bash">
            {TimeRangeQueryCurl}
        </CodeBlock>
    </TabItem>
</Tabs>

### Querying Record by Timestamp

The simplest way to query a record by its timestamp is to use the `read` method provided by the ReductStore SDKs or HTTP API:

import ReadRecordPy from "!!raw-loader!../examples/py/src/data_querying_timestamp.py"
import ReadRecordJs from "!!raw-loader!../examples/js/src/data_querying_timestamp.mjs"
import ReadRecordRs from "!!raw-loader!../examples/rs/examples/data_querying_timestamp.rs"
import ReadRecordCpp from "!!raw-loader!../examples/cpp/src/data_querying_timestamp.cc"
import ReadRecordCurl from "!!raw-loader!../examples/curl/data_querying_timestamp.sh"

<Tabs>
    <TabItem value="Python">
        <CodeBlock language="python">
            {ReadRecordPy}
        </CodeBlock>
    </TabItem>
    <TabItem value="JavaScript">
        <CodeBlock language="javascript">
            {ReadRecordJs}
        </CodeBlock>
    </TabItem>
    <TabItem value="Rust">
        <CodeBlock language="rust">
            {ReadRecordRs}
        </CodeBlock>
    </TabItem>
    <TabItem value="C++">
        <CodeBlock language="cpp">
            {ReadRecordCpp}
        </CodeBlock>
    </TabItem>
    <TabItem value="Curl">
        <CodeBlock language="bash">
            {ReadRecordCurl}
        </CodeBlock>
    </TabItem>
</Tabs>

### Using Labels to Filter Data

Filtering data by labels is another common use case. You can use `include` and `exclude` parameters to filter records by specific labels. The `include` parameter is used to filter records by specified labels values. Only records that match all specified labels values will be included in the result. Conversely, the `exclude` parameter is used to exclude records that match all specified labels from the result.

For example, consider a data set with annotated photos of celebrities. We want to retrieve the first 10 photos of celebrities taken in 2006, excluding those of Rowan Atkinson:

import FilterQueryPy from "!!raw-loader!../examples/py/src/data_querying_filter.py"
import FilterQueryJs from "!!raw-loader!../examples/js/src/data_querying_filter.mjs"
import FilterQueryRs from "!!raw-loader!../examples/rs/examples/data_querying_filter.rs"
import FilterQueryCpp from "!!raw-loader!../examples/cpp/src/data_querying_filter.cc"
import FilterQueryCLI from "!!raw-loader!../examples/cli/data_querying_filter.sh"
import FilterQueryCurl from "!!raw-loader!../examples/curl/data_querying_filter.sh"

<Tabs>
    <TabItem value="Python">
        <CodeBlock language="python">
            {FilterQueryPy}
        </CodeBlock>
    </TabItem>
    <TabItem value="JavaScript">
        <CodeBlock language="javascript">
            {FilterQueryJs}
        </CodeBlock>
    </TabItem>
    <TabItem value="Rust">
        <CodeBlock language="rust">
            {FilterQueryRs}
        </CodeBlock>
    </TabItem>
    <TabItem value="C++">
        <CodeBlock language="cpp">
            {FilterQueryCpp}
        </CodeBlock>
    </TabItem>
    <TabItem value="CLI">
        <CodeBlock language="bash">
            {FilterQueryCLI}
        </CodeBlock>
    </TabItem>
    <TabItem value="Curl">
        <CodeBlock language="bash">
            {FilterQueryCurl}
        </CodeBlock>
    </TabItem>
</Tabs>

